Use "StandardCharsets.UTF_8" instead of magic string
[#168714093]